--- a/Payroll/Payroll.vcxproj
+++ b/Payroll/Payroll.vcxproj
@@ -80,6 +80,10 @@
   <ItemGroup>
     <ClCompile Include="Payroll.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Employee.h" />
+    <ClInclude Include="PayrollUI.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
