--- a/Payroll/Payroll.vcxproj
+++ b/Payroll/Payroll.vcxproj
@@ -78,10 +78,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Employee.c" />
     <ClCompile Include="Payroll.c" />
+    <ClCompile Include="PayrollUI.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Employee.h" />
+    <ClInclude Include="Payroll.h" />
     <ClInclude Include="PayrollUI.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
