--- a/Payroll/Payroll.vcxproj.filters
+++ b/Payroll/Payroll.vcxproj.filters
@@ -18,12 +18,21 @@
     <ClCompile Include="Payroll.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PayrollUI.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Employee.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Employee.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PayrollUI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Payroll.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
