--- a/Payroll/Payroll.vcxproj
+++ b/Payroll/Payroll.vcxproj
@@ -79,11 +79,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Employee.c" />
+    <ClCompile Include="IO.c" />
     <ClCompile Include="Payroll.c" />
     <ClCompile Include="PayrollUI.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Employee.h" />
+    <ClInclude Include="IO.h" />
     <ClInclude Include="Payroll.h" />
     <ClInclude Include="PayrollUI.h" />
   </ItemGroup>
