--- a/Payroll/Payroll.vcxproj.filters
+++ b/Payroll/Payroll.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Employee.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="IO.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Employee.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Payroll.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IO.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
